--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
+  },
+  "dependencies": {
+    "youtube-api-search": "0.0.5"
   }
 }
